--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,18 @@
-/* 
-    General Styles
-*/
+
+
+
+.card {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    margin-bottom: 20px;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+}
+
+.btn-outline-warning {
+    border-color: #ffc107;
+    color: #ffc107;
+    margin-left: 10px;
+}
